syntax = "proto3";

option csharp_namespace = "gRPC.TaskManagement.Presentation";

service CategoryItem{
	rpc GetCategory(GetCategoryRequest) returns (GetCategoryResponse);
	rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse);
	rpc GetAllCategories(GetAllCategoriesRequest) returns (stream GetAllCategoriesResponse);
	rpc DeleteCategory(DeleteCategoryRequest) returns (DeleteCategoryResponse);
	rpc UpdateCategory(UpdateCategoryRequest) returns (UpdateCategoryResponse);
	rpc FindCategoryByName(FindCategoryByNameRequest) returns (stream GetAllCategoriesResponse);
	rpc GetAllCategoriesPaging(GetAllCategoriesPagingRequest) returns (stream GetAllCategoriesResponse);
}


message GetCategoryRequest{
	int32 id = 1;
}

message GetCategoryResponse{
	int32 id = 1;
	string name = 2;
	string description = 3;
	string color = 4;
}

message CreateCategoryRequest{
	string name = 1;
	string description = 2;
	string color = 3;
}

message CreateCategoryResponse{
	int32 id = 1;
	string name = 2;
	string description = 3;
	string color = 4;
}

message GetAllCategoriesRequest{
}

message GetAllCategoriesResponse{
	int32 id = 1;
	string name = 2;
	string description = 3;
	string color = 4;
}

message DeleteCategoryRequest{
	int32 id = 1;
}

message DeleteCategoryResponse{
	int32 status = 1;
}


message UpdateCategoryRequest{
	int32 id =1;
	string name = 2;
	string description = 3;
	string color = 4;
}

message UpdateCategoryResponse{
	int32 id =1;
	string name = 2;
	string description = 3;
	string color = 4;
}


message FindCategoryByNameRequest{
	string name = 1;
}


message GetAllCategoriesPagingRequest{
	int32 page = 1;
	int32 limit = 2;
}

message GetAllCategoriesPagingResponse{
	int32 id = 1;
	string name = 2;
	string description = 3;
	string color = 4;
}

